chore: fix text

--- a/awesome_project/awesome_app/templates/awesome_app/chat.html
+++ b/awesome_project/awesome_app/templates/awesome_app/chat.html
@@ -39,11 +39,11 @@
 
             <div class="chat-box flex-box chatBotAi" onclick="chatWithAi(-1)" data-chat-room-id="-1">
               <div class="ai-profile">
-                <img src="{% static 'img/awesome_logo.png'%}" alt="">
+                <img src="{% static 'img/autochatbot.png'%}" alt="">
               </div>
               <div>
-                <p class="bold">대화형 AI 챗봇</p>
-                <p class="chat-thumb-text">궁금한 내용을 물어보세요!</p>
+                <p class="bold">린공지능 로보-트</p>
+                <p class="chat-thumb-text">궁금한건 날래날래 물어보라</p>
               </div>
             </div>
 
