--- a/awesome_project/awesome_app/templates/awesome_app/main.html
+++ b/awesome_project/awesome_app/templates/awesome_app/main.html
@@ -36,7 +36,7 @@
           <h1>우리 동네<br>중고 직거래 장터</h1>
           <p>동네 주민들과 가깝고 따뜻한 거래를 지금 경험하라우</p>
           <a href="{% url 'awesome_app:trade' %}">
-            <button class="button-gray">인기매물 보기</button>
+            <button class="button-gray">린기매물 보기</button>
           </a>
         </div>
       </div>
@@ -45,22 +45,22 @@
       <div class="container flex-box">
         <div class="section3-text flex-box column gap16 baseline">
           <h1>동무와 함께 하는<br>동네생활</h1>
-          <p>우리 동네의 다양한 이야기를 이웃과 함께 나누어요.</p>
+          <p>동무 동네의 다양한 이야기를 동무들과 함께 나누라.</p>
           <div class="flex-box between" style="gap:44px">
             <div class="flex-box column gap8 baseline">
               <img src="{% static 'img/icon_section3_1.png' %}" alt=""/>
               <h5>우리 동네질문</h5>
-              <h5>궁금한 게 있을 땐 이웃에게 물어보세요</h5>
+              <h5>궁금한 게 있을 땐 이웃에게 물어보라우</h5>
             </div>
             <div class="flex-box column gap8 baseline">
               <img src="{% static 'img/icon_section3_2.png' %}" alt=""/>
               <h5>동네분실센터</h5>
-              <h5>무언가를 잃어버렸을 때, 함께 찾을 수 있어요</h5>
+              <h5>무언가를 잃어버렸을 때, 함께 찾을 수 있다기래</h5>
             </div>
             <div class="flex-box column gap8 baseline">
               <img src="{% static 'img/icon_section3_3.png' %}" alt=""/>
               <h5>동네모임</h5>
-              <h5>조회사가 비슷한 이웃과 온오프라인으로 만나요</h5>
+              <h5>조회사가 비슷한 동무와 온오프라인으로 만나라우</h5>
             </div>
           </div>
         </div>
@@ -73,7 +73,7 @@
         <img src="{% static 'img/landing3.png' %}" alt=""/>
         <div class="description-box">
           <h1>내 근처에서 찾는<br>동네가게</h1>
-          <p>우리 동네 가게를 찾고 있나요?<br>동네 주민이 남긴 진짜 후기를 함께 확인해보세요!</p>
+          <p>우리 동네 가게를 찾고 있나?<br>동네 주민이 남긴 진짜 후기를 함께 확인해보라우!</p>
         </div>
       </div>
     </div>
@@ -81,7 +81,7 @@
 
   <div class="content-box trade-info-section">
     <div class="container trade-section">
-      <h1>중고거래 인기매물</h1>
+      <h1>중고거래 린기매물</h1>
       <div class="full-box trade-box">
         <div class="flex-box full-box card-container between">
           {% for post in posts %}
@@ -110,7 +110,7 @@
           {% endfor %}
 
         </div>
-        <a href="/trade">인기매물 더 보기</a>
+        <a href="/trade">린기매물 더 보기</a>
       </div>
     </div>
   </div>
