--- a/awesome_project/awesome_app/templates/awesome_app/nav.html
+++ b/awesome_project/awesome_app/templates/awesome_app/nav.html
@@ -18,7 +18,7 @@
               <button id="location-button">동네인증</button>
             </a>
             <a href="/local_life">
-              <button id="location-button">동무염탐</button>
+              <button id="location-button">동무렴탐</button>
             </a>
           {% endif %}
 
@@ -26,10 +26,10 @@
       </div>
       <div class="flex-box gap8">
         <form method="GET" action="{% url 'awesome_app:search' %}">
-          <input type="text" id="search" name="search" class="search" placeholder="물품이나 동네를 검색해보세요"/>
+          <input type="text" id="search" name="search" class="search" placeholder="물품이나 동네를 찾으라우"/>
         </form>
         {% if user.is_authenticated %}
-        <a href="{% url 'awesome_app:chat' 0 user.id %}" class="ghost-button orange">채팅하기</a>
+        <a href="{% url 'awesome_app:chat' 0 user.id %}" class="ghost-button orange">대화하기</a>
           <a href="{% url 'awesome_app:logout' %}" class="ghost-button">로그아웃</a>
 
         {% else %}
