--- a/awesome_project/awesome_app/templates/awesome_app/trade.html
+++ b/awesome_project/awesome_app/templates/awesome_app/trade.html
@@ -25,7 +25,7 @@
         <div class="container ">
           <div class="trade-text">
             <h3>믿을만한</br>동무 간 중고거래</h3>
-          <p>동네 동무들과 가깝고 따뜻한 거래를</br>지금 경험해보세요.</p>
+          <p>동네 동무들과 가깝고 따땃한 거래를</br>지금 경험하라.</p>
       </div>
       <div class="thumbnail-img">
         <img src="{% static 'img/img1.png' %}" alt=""/>
