--- a/awesome_project/awesome_app/static/css/chat.css
+++ b/awesome_project/awesome_app/static/css/chat.css
@@ -168,6 +168,18 @@ hr{
     position: relative;
 }
 
+
+.chat-main-container_popup{
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    position: relative;
+}
+
 .contact-info{
     padding: 14px 20px;
     border-bottom: 1px solid #e2e2e2;
@@ -225,11 +237,40 @@ hr{
     gap: 8px;
 }
 
+.message-box_chatbot{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    border-bottom: 1px solid black;
+    padding-bottom: 5px;
+    
+}
+
+.chatbot_select{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .message-text{
     padding: 14px 20px;
     background-color: #eaeaea;
     width: fit-content;
     border-radius: 20px;
+}
+
+.message-text_q{
+    padding: 10px 10px;
+    background-color: #eaeaea;
+    width: fit-content;
+    border-radius: 20px;
+    border: 0;
+    margin: 5px;
+}
+
+.chatbot_q{
+    font-weight: 500;
 }
 
 .from-me{
@@ -255,7 +296,7 @@ hr{
     border-radius: 8px;
     justify-content: space-between;
 
-    position: absolute; /* chat-main-container에 대해 상대적인 위치 설정 */
+    /* position: absolute; chat-main-container에 대해 상대적인 위치 설정 */
     bottom: 5px;
     width: calc(100% - 40px);
 }
