--- a/awesome_project/awesome_app/static/css/main.css
+++ b/awesome_project/awesome_app/static/css/main.css
@@ -32,7 +32,7 @@
 }
 
 .section1 button{
-    background-color: #ff6f0e;
+    background-color: #B22222;
     color: #fff;
     padding: 16px 30px;
     border: none;
