--- a/awesome_project/awesome_app/static/css/nav.css
+++ b/awesome_project/awesome_app/static/css/nav.css
@@ -38,8 +38,8 @@ nav{
 }
 
 .orange{
-    color: #fa6616;
-    border: 1px solid #fa6616;
+    color: #B22222;
+    border: 1px solid #B22222;
 }
 
 input{
@@ -50,6 +50,6 @@ input{
 }
 
 .orange-text{
-    color: #fa6616;
+    color: #B22222;
     
 }
