--- a/awesome_project/awesome_app/static/css/trade.css
+++ b/awesome_project/awesome_app/static/css/trade.css
@@ -144,7 +144,7 @@ h1{
     position: fixed;
     bottom: 40px;
     right: 40px;
-    background-color: #ff6f0e; 
+    background-color: #B22222; 
     border-radius: 50%;
     width: 80px; 
     height: 80px; 
@@ -163,7 +163,7 @@ h1{
   }
 
   .floating-button:hover {
-    background-color: #ff8534; 
+    background-color: #B22222; 
     cursor: pointer;
   }
 
