--- a/awesome_project/awesome_app/static/css/write.css
+++ b/awesome_project/awesome_app/static/css/write.css
@@ -50,7 +50,7 @@ label{
 .submit-button-box button{
   width:-webkit-fill-available;
   margin-top: 40px;
-  background-color: #fa6616;
+  background-color: #B22222;
   border: none;
   border-radius: 4px;
   color: #fff;
