--- a/awesome_project/awesome_app/templates/awesome_app/chat.html
+++ b/awesome_project/awesome_app/templates/awesome_app/chat.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" type="text/css" href="{% static 'css/nav.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'css/footer.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'css/chat.css' %}" />
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'dangun_app/favicon.ico' %}"/>
   <title>채팅하기</title>
 </head>
 
