--- a/awesome_project/awesome_app/templates/awesome_app/location.html
+++ b/awesome_project/awesome_app/templates/awesome_app/location.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/nav.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/location.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/footer.css' %}"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'dangun_app/favicon.ico' %}"/>
     <title>동네인증</title>
   </head>
 
