--- a/awesome_project/awesome_app/templates/awesome_app/main.html
+++ b/awesome_project/awesome_app/templates/awesome_app/main.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/nav.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/footer.css' %}"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'dangun_app/favicon.ico' %}"/>
   </head>
 
   <body>
@@ -17,13 +18,13 @@
     <div class="content-box section1">
       <div class="container between flex-box">
         <div class="main-box flex-box column">
-          <h1>동무 근처의<br>지역 생활 연대</h1>
-          <h4>동네라서 할 수 있는 모든 것<br>당근에서 가까운 동무와 함께 하라우.</h4>
+          <h1>린민들이여<br>지혜롭게 돌려쓰자<br>무용지물이란 없다</h1>
+          <h4>동네라서 할 수 있는 모든 것<br>린지무에서 가까운 동무와 함께 하라우.</h4>
           <div class="flex-box gap16">
             <button class="flex-box gap8" onclick="location.href='https://play.google.com/store/apps/details?id=com.towneers.www&hl=ko-KR'">
-              <img src="{% static 'img/icon_googleplay.png' %}" alt=""/>Google Play</button>
+              <img src="{% static 'img/icon_googleplay.png' %}" alt=""/>구-글 놀이</button>
             <button class="flex-box gap8" onclick="location.href='https://apps.apple.com/kr/app/%EB%8B%B9%EA%B7%BC/id1018769995'">
-              <img src="{% static 'img/icon_appstore.png' %}" alt=""/>App Store</button>
+              <img src="{% static 'img/icon_appstore.png' %}" alt=""/>어-플 상점</button>
           </div>
         </div>
         <img src="{% static 'img/character.png' %}" alt=""/>
