--- a/awesome_project/awesome_app/templates/awesome_app/search.html
+++ b/awesome_project/awesome_app/templates/awesome_app/search.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/nav.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/search.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/footer.css' %}"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'dangun_app/favicon.ico' %}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>검색결과</title>
   </head>
