--- a/awesome_project/awesome_app/templates/awesome_app/write.html
+++ b/awesome_project/awesome_app/templates/awesome_app/write.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/write.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/nav.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/footer.css' %}"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'dangun_app/favicon.ico' %}"/>
   </head>
 
   <body>
