--- a/awesome_project/awesome_app/static/css/chat.css
+++ b/awesome_project/awesome_app/static/css/chat.css
@@ -58,7 +58,7 @@ h3{
 }
 
 .button-box .orange {
-    background-color: #fa6616;
+    background-color: #B22222;
     color: #fff;
     font-weight: 700;
     padding: 12px 32px;
@@ -95,7 +95,7 @@ hr{
 }
 
 .temp{
-    border: 1px solid #fa6616;
+    border: 1px solid #B22222;
     font-size: 12px;
     border-radius: 48px;
     padding: 2px 6px;
@@ -291,7 +291,7 @@ hr{
 }
 
 .from-me div {
-    background-color: #fa6616;
+    background-color: #B22222;
     color: #fff;
     margin : 5px
 }
@@ -378,7 +378,7 @@ a{
 }
 
 .selected-chat {
-    background-color: hsl(22, 100%, 60%);
+    background-color: #B22222;
 }
 
 .toast {
