--- a/awesome_project/awesome_app/static/css/trade_post.css
+++ b/awesome_project/awesome_app/static/css/trade_post.css
@@ -58,7 +58,7 @@ h3{
 }
 
 .button-box .orange {
-    background-color: #fa6616;
+    background-color: #B22222;
     color: #fff;
     font-weight: 700;
     padding: 12px 32px;
