--- a/awesome_project/awesome_app/templates/awesome_app/chat.html
+++ b/awesome_project/awesome_app/templates/awesome_app/chat.html
@@ -39,7 +39,7 @@
                 </div>
               </div>
             </a>
-            <div class="chat-box flex-box chatBotAi" onclick="chatWithAi(-1)" data-chat-room-id="-1">
+            <div class="chat-box flex-box chatBotAi" onclick="redirectToChat(0, 12)" data-chat-room-id="-1">
               <div class="ai-profile">
                 <img src="{% static 'img/autochatbot.png'%}" alt="">
               </div>
@@ -325,6 +325,11 @@
       }
     }
 
+    ws.onclose= function(e){
+      console.log(e);
+              console.error('웹 소켓이 닫혔습니다');
+           };
+
     function scrollToBottom() {
       chatLog.scrollTop = chatLog.scrollHeight;
     }
@@ -555,23 +560,15 @@
     }
   });
 
-  function chatWithAi(chatRoomId) {
-    const chatBotAi = document.querySelector('.chatBotAi');
-    chatBotAi.classList.add('selected-chat');
-
-    window.location.href = `/chat_with_ai`;
-  }
-
   document.addEventListener("DOMContentLoaded", function () {
     const currentUrl = window.location.href;
     const chatBotAi = document.querySelector('.chatBotAi');
 
-    if (currentUrl.includes('chat_with_ai')) {
+    if (currentUrl.includes('/0/12')) {
       chatBotAi.classList.add('selected-chat');
     } else {
       chatBotAi.classList.remove('selected-chat');
     }
-
 
   });
 
