chore: modify color

--- a/awesome_project/awesome_app/templates/awesome_app/chat.html
+++ b/awesome_project/awesome_app/templates/awesome_app/chat.html
@@ -578,7 +578,7 @@
 
     messageInput.addEventListener('input', function () {
       if (messageInput.value.trim() !== '') {
-        chatMessageSubmitBtn.style.backgroundColor = '#fa6616';
+        chatMessageSubmitBtn.style.backgroundColor = '#B22222';
         chatMessageSubmitBtn.style.color = '#fff';
       } else {
         chatMessageSubmitBtn.style.backgroundColor = '#E1E1E1';
