--- a/awesome_project/awesome_app/templates/awesome_app/ai_chatbot_popup.html
+++ b/awesome_project/awesome_app/templates/awesome_app/ai_chatbot_popup.html
@@ -18,11 +18,11 @@
     <div style="height:100%">
         <!--채팅창 메인-->
         <div class="message-box_chatbot from-you">
-                <center><div class="message-text">안녕하세요.챗봇입니다.무엇을 도와드릴까요?</div></center>
+                <center><div class="message-text">안녕한가 기래. 내래 기깔나는 FAQ 린공지능 로보-트라 한다. 필요한걸 말하라.</div></center>
                 <div class="chatbot_select">
                     
                     <button class="message-text_q chatbot_q" id="info_man">사이트 소개</button>
-                    <button class="message-text_q chatbot_q" id="login_man">로그인 방법</button>
+                    <button class="message-text_q chatbot_q" id="login_man">동무 린증 방법</button>
                     <button class="message-text_q chatbot_q" id="signup_man">회원가입 방법</button>
                     <button class="message-text_q chatbot_q" id="trade_man">게시글 작성 방법</button>
                     <button class="message-text_q chatbot_q" id="auth_man">동네 인증 방법</button>
