chore: modify text

--- a/awesome_project/awesome_app/templates/registration/register.html
+++ b/awesome_project/awesome_app/templates/registration/register.html
@@ -34,8 +34,8 @@
             <button type="submit" class="login-button">등록</button>
           </form>
           <p class="register-reco">
-            이미 계정이 있으신가요?
-            <a href="{% url 'awesome_app:login' %}" class="bold">로그인</a>
+            이미 린지무 동무인가?
+            <a href="{% url 'awesome_app:login' %}" class="bold">동무 린증</a>
           </p>
         </div>
       {% endblock %}
