--- a/awesome_project/awesome_app/templates/awesome_app/trade_post.html
+++ b/awesome_project/awesome_app/templates/awesome_app/trade_post.html
@@ -34,13 +34,13 @@
                     <button class="grey">수정하기</button>
                   </a>
                   <a href="{% url 'awesome_app:chat' room_number request.user.id %}">
-                    <button class="orange">채팅보기</button>
+                    <button class="orange">대화보기</button>
                   </a>
                 </div>
               {% else %}
                 <div class="button-box">
                   <a href="{% url 'awesome_app:chat' room_number post.user.id %}">
-                    <button class="orange">채팅하기</button>
+                    <button class="orange">대화하기</button>
                   </a>
                 </div>
               {% endif %}
