--- a/awesome_project/awesome_app/templates/awesome_app/footer.html
+++ b/awesome_project/awesome_app/templates/awesome_app/footer.html
@@ -1,14 +1,18 @@
+{% load static %}
+
 <div class="footer">
   <div class="container flex-box between">
     <div class="buttons flex-box">
       <a href="/trade">중고거래</a>
-      <a href="/chat">채팅하기</a>
+      {% if user.is_authenticated %}
+      <a href="{% url 'awesome_app:chat' 0 user.id %}">대화하기</a>
+      {% endif %}
     </div>
     <div>
       <p class="bold" style="margin-bottom:8px">당근 앱 다운로드</p>
       <div class="download-center">
-        <button onclick="location.href='https://apps.apple.com/kr/app/%EB%8B%B9%EA%B7%BC/id1018769995'">App Store</button>
-        <button onclick="location.href='https://play.google.com/store/apps/details?id=com.towneers.www&hl=ko-KR'">Google Play</button>
+        <button onclick="window.open('https://apps.apple.com/kr/app/%EB%8B%B9%EA%B7%BC/id1018769995')">App Store</button>
+        <button onclick="window.open('https://play.google.com/store/apps/details?id=com.towneers.www&hl=ko-KR')">Google Play</button>
       </div>
     </div>
   </div>
