--- a/awesome_project/awesome_app/templates/awesome_app/main.html
+++ b/awesome_project/awesome_app/templates/awesome_app/main.html
@@ -21,9 +21,9 @@
           <h1>린민들이여<br>지혜롭게 돌려쓰자<br>무용지물이란 없다</h1>
           <h4>동네라서 할 수 있는 모든 것<br>린지무에서 가까운 동무와 함께 하라우.</h4>
           <div class="flex-box gap16">
-            <button class="flex-box gap8" onclick="location.href='https://play.google.com/store/apps/details?id=com.towneers.www&hl=ko-KR'">
+            <button class="flex-box gap8" onclick="window.open('https://play.google.com/store/apps/details?id=com.towneers.www&hl=ko-KR')">
               <img src="{% static 'img/icon_googleplay.png' %}" alt=""/>구-글 놀이</button>
-            <button class="flex-box gap8" onclick="location.href='https://apps.apple.com/kr/app/%EB%8B%B9%EA%B7%BC/id1018769995'">
+            <button class="flex-box gap8" onclick="window.open('https://apps.apple.com/kr/app/%EB%8B%B9%EA%B7%BC/id1018769995')">
               <img src="{% static 'img/icon_appstore.png' %}" alt=""/>어-플 상점</button>
           </div>
         </div>
