--- a/awesome_project/awesome_app/static/css/chat.css
+++ b/awesome_project/awesome_app/static/css/chat.css
@@ -165,8 +165,11 @@ hr{
 .thumbnail-box{
     width: 48px;
     height: 48px;
-    background-color:#818181;
     border-radius: 8px;
+}
+
+.thumbnail-box img {
+    height: 48px;
 }
 
 /* 채팅창 */
