fix: fix image path

--- a/awesome_project/awesome_app/templates/awesome_app/search.html
+++ b/awesome_project/awesome_app/templates/awesome_app/search.html
@@ -28,7 +28,7 @@
                   <a href="{% url 'awesome_app:trade_post' post.pk %}" class="trade-text-link">
                     <div class="card-img">
                       {% if post.images %}
-                        <img src="{{ post.images.url }}" alt="{{ post.title }}">
+                        <img src="{% static post.images.url %}" alt="{{ post.title }}">
                       {% endif %}
                     </div>
                     <div class="card-info-box">
