chore: make dowload link in footer open in new tab

--- a/awesome_project/awesome_app/templates/awesome_app/footer.html
+++ b/awesome_project/awesome_app/templates/awesome_app/footer.html
@@ -9,8 +9,8 @@
     <div>
       <p class="bold" style="margin-bottom:8px">린지무 어-플 내려받기</p>
       <div class="download-center">
-        <button onclick="location.href='https://play.google.com/store/apps/details?id=com.towneers.www&hl=ko-KR'">구-글 놀이</button>
-        <button onclick="location.href='https://apps.apple.com/kr/app/%EB%8B%B9%EA%B7%BC/id1018769995'">어-플 상점</button>
+        <button onclick="window.open('https://play.google.com/store/apps/details?id=com.towneers.www&hl=ko-KR')">구-글 놀이</button>
+        <button onclick="window.open('https://apps.apple.com/kr/app/%EB%8B%B9%EA%B7%BC/id1018769995')">어-플 상점</button>
     </div>
   </div>
 </div>
