chore: add text

--- a/awesome_project/awesome_app/templates/awesome_app/chat.html
+++ b/awesome_project/awesome_app/templates/awesome_app/chat.html
@@ -109,7 +109,7 @@
                 </div>
                 <div class="goods-info-box">
                   <p>{{ good.title }}</p>
-                  <p class="bold">{{ good.price | intcomma }}</p>
+                  <p class="bold">{{ good.price | intcomma }} 원</p>
                 </div>
               </div>
               <div>
