feat: 게시글 수정 및 css 수정

--- a/awesome_project/awesome_app/templates/awesome_app/main.html
+++ b/awesome_project/awesome_app/templates/awesome_app/main.html
@@ -18,7 +18,9 @@
     <div class="content-box section1">
       <div class="container between flex-box">
         <div class="main-box flex-box column">
-          <h1>린민들이여<br>지혜롭게 돌려쓰자<br>무용지물이란 없다</h1>
+          <h1><span style="color: #b22222;">린</span>민 동지들이여<br>
+            <span style="color: #b22222;">지</span>혜롭게 돌려쓰자<br>
+            <span style="color: #b22222;">무</span>용지물이란 없다</h1>
           <h4>동네라서 할 수 있는 모든 것<br>린지무에서 가까운 동무와 함께 하라우.</h4>
           <div class="flex-box gap16">
             <button class="flex-box gap8" onclick="window.open('https://play.google.com/store/apps/details?id=com.towneers.www&hl=ko-KR')">
