--- a/awesome_project/awesome_app/templates/awesome_app/trade.html
+++ b/awesome_project/awesome_app/templates/awesome_app/trade.html
@@ -53,7 +53,7 @@
                 <div class="card-info-box">
                   <h5>{{ post.title }}</h5>
                   <p class="bold">
-                    {{ post.price |intcomma }}
+                    {{ post.price |intcomma }}원
                     {% comment %} 15000원 {% endcomment %}
                   </p>
                   <p>{{ post.location }}</p>
