--- a/awesome_project/awesome_app/templates/awesome_app/trade_post.html
+++ b/awesome_project/awesome_app/templates/awesome_app/trade_post.html
@@ -50,7 +50,7 @@
               <div class="flex-box between">
                 <h3>{{ post.title }}</h3>
                 <h3>
-                  {{ post.price | intcomma }}
+                  {{ post.price | intcomma }}원
                   {% comment %} 15000원 {% endcomment %}
                 </h3>
               </div>
