--- a/awesome_project/awesome_app/templates/awesome_app/trade.html
+++ b/awesome_project/awesome_app/templates/awesome_app/trade.html
@@ -36,7 +36,7 @@
 
   <div class="post-box">
     <div class="container column center">
-      <h1>중고거래 인기매물</h1>
+      <h1>중고거래 린기매물</h1>
     </div>
     <div class="container column center">
       <div class="full-box trade-box column">
